--- a/src/index.html
+++ b/src/index.html
@@ -4,22 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>CarCenterWebApp</title>
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
-  <link href="assets/css/sb-admin-2.min.css" rel="stylesheet">
+  <link href="assets/css/sb-admin-2.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
   <app-root></app-root>
-
-
-
 </body>
 
 </html>
